Ajustado configuraciones incidencia sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,6 @@ sonar.sources=src/app
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
-sonar.javascript.lcov.reportPaths=test-results/coverage/coverage.lcov
+sonar.typescript.lcov.reportPaths=reports/coverage/app-base/lcov.info
+sonar.ts.tslint.configPath=tslint.json
+sonar.junit.reportPaths=reports/unit/test-results.xml
