Agregado tsconfig paths solicitud login

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,8 +17,14 @@
       "@producto/*": [
         "src/app/feature/producto/*"
       ],
+      "@solicitud/*": [
+        "src/app/feature/solicitud/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
+      ],
+      "@login/*": [
+        "src/app/feature/login/*"
       ]
     }
   },
