--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,14 @@
       "@producto/*": [
         "src/app/feature/producto/*"
       ],
+      "@solicitud/*": [
+        "src/app/feature/solicitud/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
+      ],
+      "@login/*": [
+        "src/app/feature/login/*"
       ]
     }
   },
