--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.7",
+    "sweetalert2": "^11.1.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
