Ajustado reporte sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,4 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=reports/coverage/app-base/lcov.info
 sonar.ts.tslint.configPath=tslint.json
 sonar.junit.reportPaths=reports/unit/test-results.xml
+sonar.testExecutionReportPaths=reports/unit/test-sonar.xml
