--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
     "colombian-holidays": "^1.7.4",
+    "karma-sonarqube-reporter": "^1.4.0",
     "moment": "^2.29.1",
     "ng-circle-progress": "^1.6.0",
     "ngx-cookie-service": "^11.0.2",
